--- a/css/overview.css
+++ b/css/overview.css
@@ -181,6 +181,9 @@
     font-size: 15px;
 
 }
+.section-five{
+    margin-bottom: -5px
+}
 .section-five-img{
     position: relative;
 }
@@ -441,12 +444,12 @@
 }
 .section-eleven-logo{
     display: flex;
-    padding: 44px;
+    padding: 17px;
 }
 .section-eleven-logo-sub{
     display: flex;
-    padding: 44px;
-    margin-top: 3%;
+    padding: 31px;
+
 }
 .section-eleven-first-logo{
     position: absolute;
@@ -490,22 +493,22 @@
 }
 
 .section-eleven-fourth-sub-logo-para-one{
-    width: 34%;
-    margin-left: 33%;
+    width: 41%;
+    margin-left: 30%;
     margin-top: 3px;
-    font-size: 12px;
+    font-size: 6px;
 }
 .section-eleven-fifth-sub-logo-para-two{
     width: 34%;
     margin-left: 33%;
     margin-top: 3px;
-    font-size: 12px;
+    font-size: 6px;
 }
 .section-eleven-sixth-sub-logo-para-three{
     width: 36%;
     margin-left: 33%;
     margin-top: 3px;
-    font-size: 12px;
+    font-size: 6px;
 }
 
 .section-twelve-img{
@@ -1024,12 +1027,810 @@
 .twenty-one-text{
     color: #8f8f8f;
     display: flex;
-    width: 46%;
+    width: 51%;
     justify-content: center;
     margin-left: 28%;
-    font-size: 9px;
+    font-size: 10px;
     flex-direction: column;
     margin-top: 4%;
     gap: 6px;
+    margin-bottom: 3%;
 
 }
+
+/* Mobile Version */
+     
+@media only screen and (max-width: 767px){ 
+
+.nav{
+    /* background-color: orange; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15%;
+    font-family: 'Camphor Pro VF', 'Camphor Pro', sans-serif;
+    width: 100%;
+    margin-top: 21px;
+    
+}
+.heading{
+    width: fit-content;
+    font-size: 15px;
+    font-weight: 600;
+    
+}
+.links{
+    display: flex;
+    width: fit-content;
+    text-align: center;
+    font-size: 13px;
+    gap: 25px;
+    font-size: 13px;
+}
+.img_text{
+    position: absolute;
+    z-index: 1;
+    color: white;
+    display: flex;
+    justify-content: center;
+    width: 71%;
+    align-items: center;
+    margin-top: 11%;
+    font-size: 13px;
+}
+.text{
+    margin-left: 1%;
+}
+.img_text_sub{
+    position: absolute;
+    z-index: 1;
+    color: white;
+    display: flex;
+    justify-content: center;
+    width: 50.5%;
+    align-items: center;
+    margin-top: 18%;
+    font-size: 13px;
+}
+.section-two-work{
+    width: 100%;
+    height: 104px;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+
+}
+.above-container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    gap: 0%;
+    padding: 3px 0rem 0rem 0rem;
+    position: absolute;
+    margin-left: 67px;
+    margin-top: 4%;
+    width: 82%;
+    gap: 8px
+}
+.below-container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    gap: 0%;
+    padding: 3px 0rem 0rem 0rem;
+    position: absolute;
+    margin-left: 61px;
+    margin-top: 7%;
+    width: 76%;
+    gap: 14px;
+}
+.above-container-item-one{
+    width: 15%;
+    margin-top: 1%;
+    text-align: left;
+    font-size: 6px;
+}
+
+.below-container-item-one{
+    width: 20%;
+    margin-top: 9%;
+    text-align: left;
+    font-size: 5px;
+}
+
+.end-line{
+    display: flex;
+    color: #909090;
+    position: absolute;
+    font-size: 8px;
+    justify-content: center;
+    width: 100%;
+    margin-top: 1%;
+}
+
+.section-three-img-text-text{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 24%;
+    right: 0;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.section-three-heading{
+    width: 35%;
+    font-weight: 700;
+    font-size: 9px;
+}
+.section-three-paragraph{
+    margin-top: 1%;
+    font-size: 9px;
+}
+.section-four-text{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 10%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.section-four-heading{
+    width: 50%;
+    font-weight: 700;
+    font-size: 11px;
+}
+
+.section-four-paragraph{
+    width: 47%;
+    margin-top: 1%;
+    font-size: 5px;
+}
+.section-five-text{
+
+    position: absolute;
+    left: 29%;
+    top: 33%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.section-five-heading{
+    width: 35%;
+    font-weight: 700;
+    font-size: 11px;
+    text-align: left;
+}
+.section-five-paragraph{
+    width: 35%;
+    margin-top: 1%;
+    font-size: 6px;
+    text-align: left;
+}
+
+.section-six-text{
+    position: absolute;
+    top: 30%;
+    right: 0%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 78%;
+}
+.section-six-heading{
+    width: 35%;
+    font-weight: 700;
+    font-size: 13px;
+    text-align: left;
+}
+.section-six-sub-heading{
+    width: 45%;
+    font-weight: 700;
+    font-size: 13px;
+    text-align: left;
+}
+.section-six-container{
+    position: absolute;
+    left: 22%;
+    inset: 55% 0px 0px 22%;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 4%;
+    font-size: 8px;
+}
+.first-span{
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    font-size: 5px;
+}
+.section-six-container .first-span-para{
+    margin-top: 16px;
+}
+.section-six-container h1{
+    font-size: 27px;
+    font-weight: 100;
+}
+.section-seven-text {
+    position: absolute;
+    left: 26%;
+    top: 34%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.section-seven-heading{
+    width: 35%;
+    font-weight: 700;
+    font-size: 12px;
+    text-align: left;
+}
+.section-seven-paragraph{
+    width: 35%;
+    margin-top: 2%;
+    font-size: 5px;
+    text-align: left;
+}
+.section-eight-text{
+    position: absolute;
+    left: 26%;
+    top: 22%;
+    right: 0;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.section-eight-heading{
+    width: 29%;
+    font-weight: 700;
+    font-size: 11px;
+    text-align: left;
+    margin-right: 21px;
+}
+.section-eight-paragraph{
+    width: 35%;
+    margin-top: 2%;
+    font-size: 6px;
+    text-align: left;
+}
+.section-eight-logo{
+    display: flex;
+    padding: 22px;
+}
+.section-eight-first-logo{
+    position: absolute;
+    right: 47%;
+    width: 35%;
+}
+
+.section-eight-second-logo-para{
+    font-size: 6px;
+}
+.section-eight-second-logo{
+    position: absolute;
+    right: 35%;
+    width: 35%;
+}
+.section-eight-third-logo{
+    position: absolute;
+    right: 35%;
+    width: 35%;
+}
+.section-eight-last-para{
+    width: 55%;
+    text-align: left;
+    margin-left: 21%;
+    margin-top: 6%;
+    font-size: 5px;
+    font-weight: 100;
+}
+.section-nine-text{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    top: 18%;
+    right: 0;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+}
+.section-nine-heading{
+    width: 18%;
+    font-weight: 700;
+    font-size: 8px;
+}
+.section-nine-paragraph{
+    width: 40%;
+    margin-top: 1%;
+    margin-left: 4%;
+    font-size: 5px;
+    text-align: left;
+}
+.section-tenth-heading{
+    width: 50%;
+    font-weight: 700;
+    font-size: 10px;
+}
+.section-tenth-paragraph{
+    width: 47%;
+    margin-top: 1%;
+    font-size: 7px;
+}
+
+.section-eleven-heading{
+    width: 33%;
+    font-weight: 700;
+    font-size: 11px;
+    text-align: left;
+    margin-right: 21px;
+}
+.section-eleven-paragraph{
+    width: 39%;
+    margin-top: 2%;
+    font-size: 7px;
+    text-align: left;
+}
+.section-eleven-first-logo-para{
+    width: 34%;
+    margin-left: 33%;
+    margin-top: 3px;
+    font-size: 7px;
+}
+.section-eleven-second-logo-para {
+    width: 34%;
+    margin-left: 33%;
+    margin-top: 3px;
+    font-size: 7px;
+}
+
+.section-eleven-third-logo img{
+
+    margin-left: 12%;
+
+}
+
+.section-eleven-third-logo-para {
+    width: 52%;
+    margin-left: 33%;
+    margin-top: 3px;
+    font-size: 7px;
+}
+.section-twelve-heading {
+    width: 54%;
+    font-weight: 700;
+    font-size: 11px;
+    text-align: left;
+}
+.section-twelve-paragraph {
+    width: 45%;
+    margin-top: 2%;
+    font-size: 7px;
+    text-align: left;
+}
+.section-thirteen-first-heading {
+    position: absolute;
+    left: 6%;
+    bottom: 0;
+    top: 32%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 25%;
+    font-size: 6px;
+}
+
+.section-thirteen-second-heading {
+    position: absolute;
+    left: 33%;
+    bottom: 0;
+    top: 32%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 25%;
+    font-size: 6px;
+}
+
+.section-thirteen-first-paragraph {
+    position: absolute;
+    left: 6%;
+    bottom: 0;
+    top: 43%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 25%;
+    font-size: 7px;
+}
+
+.section-thirteen-second-paragraph {
+    position: absolute;
+    left: 33%;
+    bottom: 0;
+    top: 43%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 24%;
+    font-size: 7px;
+}
+
+.section-thirteen-third-heading {
+    position: absolute;
+    left: 6%;
+    bottom: 0;
+    top: 65%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 28%;
+    font-size: 6px;
+}
+
+.section-thirteen-fourth-heading {
+    position: absolute;
+    left: 33%;
+    bottom: 0;
+    top: 65%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 27%;
+    font-size: 6px;
+}
+
+.section-thirteen-third-paragraph {
+    position: absolute;
+    left: 6%;
+    bottom: 0;
+    top: 76%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 24%;
+    font-size: 7px;
+}
+
+.section-thirteen-fourth-paragraph {
+    position: absolute;
+    left: 33%;
+    bottom: 0;
+    top: 76%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 24%;
+    font-size: 7px;
+}
+
+.first-heading {
+    position: absolute;
+    left: 12%;
+    bottom: 0;
+    top: 13%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: center;
+    width: 27%;
+    font-size: 6px;
+}
+
+.first-paragraph {
+    position: absolute;
+    left: 12%;
+    bottom: 0;
+    top: 27%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 30%;
+    line-height: 9px;
+    font-size: 6px;
+}
+
+.second-heading {
+    position: absolute;
+    left: 60%;
+    bottom: 0;
+    top: 63%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: flex-start;
+    width: 30%;
+    font-size: 6px;
+}
+
+.second-paragraph {
+    position: absolute;
+    left: 60%;
+    bottom: 0;
+    top: 73%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: flex-start;
+    width: 30%;
+    line-height: 7px;
+    font-size: 6px;
+}
+
+.section-fifteen-heading {
+    width: 50%;
+    font-weight: 700;
+    font-size: 9px;
+}
+
+.section-fifteen-paragraph {
+    width: 47%;
+    margin-top: 1%;
+    font-size: 7px;
+}
+
+.section-fifteen-wrapper {
+    position: relative;
+    width: 100%;
+    height: 295px;
+}
+
+.section-sixteen-heading {
+    width: 50%;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.section-sixteen-paragraph {
+    width: 47%;
+    margin-top: 1%;
+    font-size: 7px;
+}
+
+.section-sixteen {
+    position: relative;
+    width: 100%;
+    height: 290px;
+}
+
+.section-sixteen-text {
+    margin-top: 7%;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+}
+
+.section-sixteen-heading {
+    width: 50%;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.section-sixteen-paragraph {
+    width: 47%;
+    margin-top: 1%;
+    font-size: 7px;
+}
+
+.section-seventeen{
+    width: 100%;
+    height: 250px;
+}
+
+.section-seventeen-text {
+    position: absolute;
+    left: 26%;
+    top: 9%;
+    right: 0;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.section-seventeen-heading {
+    width: 35%;
+    font-weight: 700;
+    font-size: 12px;
+    text-align: left;
+    margin-right: 14px;
+}
+
+.section-seventeen-logo {
+    display: flex;
+    padding: 32px;
+}
+
+
+.section-seventeen-paragraph {
+    width: 39%;
+    margin-top: 2%;
+    font-size: 7px;
+    text-align: left;
+}
+
+.section-seventeen-first-logo {
+    position: absolute;
+    right: 47%;
+    width: 35%;
+}
+
+.section-seventeen-first-logo-para {
+    width: 34%;
+    margin-left: 33%;
+    /* margin-top: 3px; */
+    font-size: 4px;
+}
+
+.section-seventeen-second-logo {
+    position: absolute;
+    right: 33%;
+    width: 35%;
+}
+
+.section-seventeen-second-logo-para {
+    width: 34%;
+    margin-left: 33%;
+    /* margin-top: 3px; */
+    font-size: 4px;
+}
+
+.section-seventeen-third-logo {
+    position: absolute;
+    right: 20%;
+    width: 35%;
+}
+
+.section-seventeen-third-logo-para {
+    width: 36%;
+    margin-left: 33%;
+    /* margin-top: 3px; */
+    font-size: 4px;
+}
+
+.section-seventeen-logo-sub {
+    display: flex;
+    padding: 0px;
+    /* margin-top: 3%; */
+}
+
+.section-seventeen-first-logo {
+    position: absolute;
+    right: 47%;
+    width: 35%;
+}
+
+.section-seventeen-fourth-sub-logo-para-one {
+    width: 34%;
+    margin-left: 33%;
+    margin-top: 3px;
+    font-size: 4px;
+}
+
+.section-seventeen-second-logo {
+    position: absolute;
+    right: 33%;
+    width: 35%;
+}
+
+.section-seventeen-fifth-sub-logo-para-two {
+    width: 34%;
+    margin-left: 33%;
+    margin-top: 3px;
+    font-size: 4px;
+}
+
+.section-seventeen-last-para {
+    width: 43%;
+    text-align: left;
+    margin-left: 4%;
+    margin-top: 15%;
+    font-size: 5px;
+    font-weight: 100;
+}
+
+.section-eighteen-heading {
+    width: 50%;
+    font-weight: 700;
+    font-size: 11px;
+}
+
+.section-eighteen-heading-sub {
+    width: 70%;
+    font-weight: 700;
+    font-size: 11px;
+}
+
+.section-eighteen-left-text-one-heading {
+    font-size: 8px;
+}
+
+.section-eighteen-left-text-one-para {
+    margin-top: 9%;
+    font-size: 5px;
+}
+
+.section-twenty-text a {
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: 100;
+}
+
+.section-twenty-one {
+    width: 100%;
+    height: 230px;
+}
+
+ .text-one {
+    font-size: 5px;
+}
+
+
+
+
+}
+
+
